<resources>
    <string name="app_name">Parliament</string>
    <string name="party_list">Party List</string>
    <string name="name">%s %s</string>
    <string name="age">Age: %1$d</string>
    <string name="constituency">Constituency: %s</string>
    <string name="title">%s</string>
    <string name="sd_eng">Social Democratic Party</string>
    <string name="ps_eng">Finns Party</string>
    <string name="kok_eng">National Coalition Party</string>
    <string name="kesk_eng">Centre Party</string>
    <string name="vihr_eng">Green League</string>
    <string name="vas_eng">Left Alliance</string>
    <string name="r_eng">Swedish People\'s Party</string>
    <string name="liik_eng">Movement Now</string>
    <string name="kd_eng">Christian Democrats</string>
    <string name="sd">Suomen Sosialidemokraattinen puolue</string>
    <string name="ps">Perussuomalaiset</string>
    <string name="kok">Kansallinen Kokoomus</string>
    <string name="kesk">Suomen Keskusta</string>
    <string name="vihr">Vihreä liitto</string>
    <string name="vas">Vasemmistoliitto</string>
    <string name="r">Svenska folkpartiet</string>
    <string name="liik">Liike Nyt</string>
    <string name="kd">Suomen Kristillisdemokraatit</string>
    <string name="member_full_name">%1$s %2$s</string>
    <string name="member_image">Member image</string>
    <string name="comment">Write a comment</string>
    <string name="rating">Rating</string>
    <string name="not_rated_yet">Not rated yet.</string>
    <string name="average_rate">%1$.2f</string>
    <string name="submit">Submit</string>
    <string name="see_all_comments">See all comments</string>
    <string name="all_comments">All Comments</string>
    <string name="party_image">party_image</string>
    <string name="dialog_warning">MP will get 0 star because you have not rated yet. Do you want to continue?</string>
    <string name="dialog_btn_submit">Continue</string>
    <string name="dialog_btn_back">Back</string>
</resources>